sheep-dog-specs/docker/overlays/release/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: sheep-dog-dev-svc
spec:
  ports:
    - name: sheep-dog-dev-svc
      port: 8080
      nodePort: 30081
