sheep-dog-specs/docker/overlays/release/ingress-patch.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: sheep-dog-dev-ingress
spec:
  rules:
    - host: sheepdogdev.io
